# bundler-api

./: .gitignore  Cargo.toml  README.md  Rocket.toml
.github/workflows/: build.yml
crates/asset/: Cargo.toml
crates/asset/src/: font.rs  icon.rs  image.rs  lib.rs  process.rs
crates/binary/: Cargo.toml
crates/binary/src/: cafe.rs  compile.rs  ctr.rs  hac.rs  lib.rs  metadata.rs
crates/bundler/: Cargo.toml  log4rs.yml
crates/bundler/src/: cors.rs  logger.rs  main.rs  response.rs  server.rs  temp_file_ext.rs  tempfile.rs  zipfile.rs
crates/bundler/src/routes/: artifact.rs  compile.rs  convert.rs  health.rs  mod.rs
crates/system/: Cargo.toml
crates/system/src/: cache.rs  downloads.rs  lib.rs  platform.rs  programs.rs  resources.rs
