[workspace]
members = ["crates/asset", "crates/binary", "crates/bundler", "crates/system"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.100"
log = "0.4.28"
log4rs = "1.4.0"
serde = "*"
tokio = { version = "1.48.0", features = ["fs", "process"] }
serde_json = "1.0.145"

[profile.dev]
opt-level = 1
debug = true
split-debuginfo = "unpacked"
incremental = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
