[package]
name = "system"
version = "0.1.0"
edition = "2024"
description = "System checks for the bundler"

[dependencies]
log.workspace = true
anyhow.workspace = true
log4rs.workspace = true
serde.workspace = true
tokio.workspace = true
serde_json.workspace = true

reqwest = { version = "0.12.24", features = ["blocking"] }
which = "8.0.0"
chrono = {version = "0.4.42", features = ["serde"]}
zip = "6.0.0"
octocrab = "0.47.1"
tempfile = "3.23.0"
